# devreplay-pattern-generator

./: .gitignore  LICENSE  config.example.json  devreplay_simulate_util.py  make_rules.sh  pyproject.toml
devreplay-pattern-generator/_utils/: setup_directories.py
devreplay-pattern-generator/constants/: paths.py
devreplay-pattern-generator/diff/: collect_changes.py
devreplay-pattern-generator/diff/collector/: pulls_collector.py
